--- a/TheControlTower/MainWindow.xaml
+++ b/TheControlTower/MainWindow.xaml
@@ -2,10 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Control Window" Height="350" Width="525">
+    <DockPanel LastChildFill="True">
+        <WrapPanel Margin="20" DockPanel.Dock="Bottom">
+            <Label>Next Flight</Label>
+            <TextBox MinWidth="200"></TextBox>
+            <Button Margin="10,0,0,0">Send airplane to runway</Button>
+        </WrapPanel>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            
         </Grid.RowDefinitions>
             <ListView Grid.Row="1" x:Name="flightDataLst" ScrollViewer.VerticalScrollBarVisibility="Visible">
                 <ListView.View>
@@ -16,8 +21,6 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-        <WrapPanel>
-            
-        </WrapPanel>   
     </Grid>
+    </DockPanel>
 </Window>
