--- a/TheControlTower/MainWindow.xaml
+++ b/TheControlTower/MainWindow.xaml
@@ -5,8 +5,8 @@
     <DockPanel LastChildFill="True">
         <WrapPanel Margin="20" DockPanel.Dock="Bottom">
             <Label>Next Flight</Label>
-            <TextBox MinWidth="200"></TextBox>
-            <Button Margin="10,0,0,0">Send airplane to runway</Button>
+            <TextBox MinWidth="200" x:Name="flightCode"></TextBox>
+            <Button Margin="10,0,0,0" Click="Button_Click">Send airplane to runway</Button>
         </WrapPanel>
     <Grid>
         <Grid.RowDefinitions>
