--- a/TheControlTower/FlightWindow.xaml
+++ b/TheControlTower/FlightWindow.xaml
@@ -1,8 +1,14 @@
 ﻿<Window x:Class="TheControlTower.FlightWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FlightWindow" Height="300" Width="300">
-    <Grid>
-        <Button Click="Button_Click">Land flight</Button>
-    </Grid>
+         Height="300" Width="350">
+    <DockPanel LastChildFill="True">
+        <WrapPanel Margin="20" DockPanel.Dock="Bottom">
+            <Button Margin="10,0,0,0" MinHeight="33"  Click="Button_Click">Take Off</Button>
+            <ComboBox Margin="10,0,0,0"></ComboBox>
+        </WrapPanel>
+        <Grid>
+            
+        </Grid>
+    </DockPanel>
 </Window>
