--- a/TheControlTower/FlightWindow.xaml
+++ b/TheControlTower/FlightWindow.xaml
@@ -1,14 +1,19 @@
 ﻿<Window x:Class="TheControlTower.FlightWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         Height="300" Width="350">
+         Height="300" Width="500"
+        Title="" x:Name="flghtWndw">
     <DockPanel LastChildFill="True">
         <WrapPanel Margin="20" DockPanel.Dock="Bottom">
-            <Button Margin="10,0,0,0" MinHeight="33"  Click="Button_Click">Take Off</Button>
-            <ComboBox Margin="10,0,0,0"></ComboBox>
+            <Button MinWidth="100" MinHeight="30" Click="TakeOff_Click" >TakeOff</Button>
+            <ComboBox MinWidth="200" Margin="10,0,0,0"   x:Name="changeRouteCmbBox" SelectionChanged="OnSelectionChanged"></ComboBox>
+            <Button Margin="10,0,0,0" MinWidth="100" Click="Land_Click">Land</Button>
         </WrapPanel>
-        <Grid>
-            
-        </Grid>
+        
+            <StackPanel>
+            <Border BorderThickness="5">
+                <Image x:Name="planeImg" HorizontalAlignment="Center" Height="300" Width="300" VerticalAlignment="Top" />
+            </Border>
+        </StackPanel>
     </DockPanel>
 </Window>
